add usecases and controllers for auth service
