# auth/internal/app/models/user.go
@@ -1,0 +1,8 @@
+package models
+
+
+type User struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
